[package]
name = "esp32_sandbox"
version = "0.1.0"
authors = ["Sergey Makarov <SeTSeR@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { package = "esp32-hal", version = "0.16.0", features = ["eh1"] }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32", "log"] }
esp-tm1637 = { version = "0.1.3" }
log = { version = "0.4.18" }
nb = { version = "1.1.0" }

[profile.lto]
inherits = "release"
opt-level = 3
debug = 0
strip = "symbols"
lto = "thin"
